Fix document link text alignment

--- a/packages/web/app/components/shared/DocumentLink.module.scss
+++ b/packages/web/app/components/shared/DocumentLink.module.scss
@@ -3,6 +3,7 @@
   display: inline-flex;
   font-family: $font-family-roboto;
   font-size: px-to-rem(16px);
+  text-align: left;
 
   :global {
     .fa-link,
